# squat-depth-nn

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.txt  setup.py  test.py
_archive_prototype/: main.py
engine/cpp/: CMakeLists.txt
engine/cpp/include/: biomechanics.hpp  geometry.hpp  image_utils.hpp  matrix.hpp  png_decoder.hpp  vision.hpp  vision_constants.hpp
engine/cpp/src/: bindings.cpp  biomechanics.cpp  geometry.cpp  main.cpp  matrix.cpp  png_decoder.cpp  vision.cpp
engine/py/src/: clicker.py
src/models/: activations.py  base.py  layers.py  sequential.py
